--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ body {
   margin: 0px 2%;
   //opacity: 0.5;
   min-width: 900px;
+  max-width: 1400px;
   grid-auto-flow: dense;
 }
 
@@ -25,16 +26,21 @@ body {
   padding: auto;
   display: grid;
   place-items: center start;
-  font-size: max(10px, 1vw);
+  font-size: clamp(10px, 1vw, 15px);
 }
 
 .empty, .drag{
-  //width: auto;
-  height: max(20px, 2vw);
+  min-width: 60px;
+  width: 5vw;
+  max-width: 80px;
+  min-height: 20px;
+  height: 2vw;
+  max-height: 25px;
   align-items: center;
 }
 .empty {
-  margin: max(12px, 1vw) 10px;
+  //margin: max(12px, 1vw) 10px;
+  margin: clamp(10px, 1vw, 15px) 10px;
   //background-color: white;
   //min-width: 20px;
   display: grid;
@@ -45,7 +51,8 @@ body {
   background-color: lightblue;
   text-align: center;
   padding: 5px;
-  font-size: max(10px, 1vw);
+  //font-size: max(8px, 1vw);
+  font-size: clamp(8px, 1vw, 15px);
   font-family: sans-serif;
   //font: 1vw "Comic Sans MS", "Comic Sans", 'Brush Script MT', sans-serif;
   outline: 0.25em solid royalblue;
