--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,12 @@
 body {
   margin: 5px;
 }
+.darkTheme {
+    background-color: black;
+}
+.darkTheme *:not(div){
+    color: white;
+}
 
 #grid {
   display: grid;
