Update main.css: fixed curriculum selector in dark theme

--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,6 @@ pre, code, textarea {
 .darkTheme .dialogBox > div {
     background-color: black;
 }
-.darkTheme pre, .darkTheme textarea{
+.darkTheme pre, .darkTheme textarea, .darkTheme select{
     background-color: #222;
 }
