--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ body > div {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 10px 0;
 }
-
+#squish ~ div{display: none;}
 
 
 
@@ -161,13 +161,17 @@ body > div {
 textarea {
     max-width: 80vw;
 }
-
 pre, code, textarea {
     background-color: #eee;
     border: 1px solid #999;
     display: block;
     padding: 20px;
     overflow-wrap: anywhere;
+}
+#importButton{
+    float: right;
+    width: 5em;
+    height: 2em;
 }
 
 
