--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,7 @@ body > div {
     background-color: white;
     border: 1px solid #999;
     padding: 10px 10px 0px;
+    max-width: 80vw;
 }
 .dialogBox > div > div {padding: 50px;}
 .dialogBox *:not(button) {
