--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,10 @@ a:visited {                 /* Visited link*/
 a:hover {color: #FF00FF;}   /* Mouse over link */
 a:active {color: #0000FF;}  /* Selected link   */
 
+ul li{
+    margin-left: 2em;
+    padding-bottom: 0.2em;
+}
 
 
 /* --- Main Content --- */
@@ -53,6 +57,13 @@ body > div {
 .menu {
     padding: 5px 0 0;
 }
+.link{
+    display: inline;
+}
+#report{
+    margin-right: 10%;
+    float: right;
+}
 #squish ~ div{display: none;}
 
 
@@ -80,6 +91,7 @@ body > div {
   display: grid;
   place-items: center start;
   font-size: clamp(10px, 2vw, 15px);
+  font-family: sans-serif;
   //font-size: clamp(10px, 1vw, 15px);
   max-height: 2em;
 }
@@ -95,6 +107,7 @@ body > div {
   //height: 2vw;
   //max-height: 25px;
   align-items: center;
+  border-radius: clamp(2px, .5vw, 8px);
 }
 .empty {
   //margin: max(12px, 1vw) 10px;
@@ -109,10 +122,11 @@ body > div {
   text-align: center;
   padding: 5px 2px 0px;
   //font-size: max(8px, 1vw);
-  font-size: clamp(8px, 0.9vw, 15px);
+  font-size: clamp(8px, 0.8vw, 12px);
   font-family: sans-serif;
   //font: 1vw "Comic Sans MS", "Comic Sans", 'Brush Script MT', sans-serif;
-  outline: 0.25em solid royalblue;
+  //outline: 0.2em solid royalblue;
+  border: 0.2em solid royalblue;
   position: relative;
   cursor: pointer;
 }
@@ -140,7 +154,7 @@ body > div {
 
 /* --- Details --- */
 //#main{position: relative;}
-#details img {
+#details img, .inlineWarning {
     height: 1em; 
     vertical-align:text-top; 
     //display: none;
@@ -189,9 +203,16 @@ body > div {
 
 
 
-/* --- Import/Export Dialog Box --- */
+/* --- Import/Export --- */
 #exportButton{visibility: hidden;}
 
+#importButton{
+    float: right;
+    width: 5em;
+    height: 2em;
+}
+
+/* --- Dialog Box --- */
 .dialogBox {
     //display: grid;
     background-color: rgba(50,50,50,0.6);
@@ -211,7 +232,7 @@ body > div {
     max-width: 80vw;
 }
 .dialogBox > div > div {padding: 50px;}
-.dialogBox *:not(button) {
+.dialogBox > div{
     cursor: auto;
 }
 .close {
@@ -232,11 +253,7 @@ pre, code, textarea {
     padding: 20px;
     overflow-wrap: anywhere;
 }
-#importButton{
-    float: right;
-    width: 5em;
-    height: 2em;
-}
+
 
 
 
