Added option to change academic year to calendar year

--- a/css/main.css
+++ b/css/main.css
@@ -220,6 +220,6 @@ pre, code, textarea {
 .darkTheme .dialogBox > div {
     background-color: black;
 }
-.darkTheme pre, .darkTheme textarea, .darkTheme select{
+.darkTheme pre, .darkTheme textarea, .darkTheme select, .darkTheme input{
     background-color: #222;
 }
